# arcor-dobot

./: .travis.yml  README.md  dependencies.rosinstall
art_dobot/: CMakeLists.txt  package.xml
art_dobot/launch/: bringup.launch
art_dobot_arm/: CMakeLists.txt
art_dobot_arm/config/: 80-dobot.rules
art_dobot_arm/launch/: dobot.launch
art_dobot_arm/src/: dobot_client.py
