<?xml version="1.0"?>
<package>

    <name>art_dobot</name>
    <version>0.0.0</version>
    <description>The art_dobot package</description>

    <maintainer email="zdenal@todo.todo">zdenal</maintainer>

    <license>TODO</license>

    <build_depend>art_dobot_arm</build_depend>
    <run_depend>art_dobot_arm</run_depend>

    <buildtool_depend>catkin</buildtool_depend>

    <test_depend>roslaunch</test_depend>

</package>
